<resources>
    <string name="app_name">Tampilan Form</string>
    <string name="nim">NIM</string>
    <string name="inputnim">Isi NIM....</string>
    <string name="rb1">RB1</string>
    <string name="rb2">RB2</string>
    <string name="cb1">CB1</string>
    <string name="cb2">CB2</string>
    <string name="cb3">CB3</string>
    <string name="cb4">CB4</string>
    <string name="simpan">SIMPAN</string>
</resources>